<resources>
    <string name="app_name">Androzic</string>
    <string name="managetracks_name">Tracks</string>
    <string name="trackproperties_name">Edit track</string>
    <string name="loadtrack_name">Load track from file</string>
    <string name="savetrack_name">Save track to file</string>
    <string name="track2route_name">Convert track to route</string>
    <string name="exporttrack_name">Export track</string>
    <string name="loadwaypoints_name">Open waypoint set</string>
    <string name="managewaypoints_name">Waypoints</string>
    <string name="waypointproperties_name">Edit waypoint</string>
    <string name="waypointproject_name">Project new waypoint</string>
    <string name="manageroutes_name">Routes</string>
    <string name="selectroute_name">Select route</string>
    <string name="loadroute_name">Load route from file</string>
    <string name="saveroute_name">Save route to file</string>
    <string name="routeproperties_name">Edit route</string>
    <string name="routedetails_name">Route details</string>
    <string name="routestart_name">Select direction</string>
    <string name="markericon_name">Select marker icon</string>
    <string name="pref_name">Androzic settings</string>
    <string name="hsi_name">HSI</string>
    <string name="information_name">Information</string>
    <string name="mapinformation_name">Map information</string>
    <string name="coordinates_name">New coordinates</string>
    <string name="maplist_name">Maps</string>
    <string name="search_name">Search results</string>
    <string name="widget_name">Androzic Location</string>
    <string name="search_hint">Enter address or name</string>
    <string name="version" formatted="false">Version: %s (build %d)</string>
    <string name="homepage">Homepage</string>
    <string name="faq">F.A.Q.</string>
    <string name="feedback">Feedback and support</string>
    <string name="about"><b>Navigation client that uses old OziExplorer ozf2 maps</b>. Great for hiking, geocaching, off-roading, sailing, boating and other outdoor activities. You are expected to be aware of OziExplorer or at least of where to get its maps. Maps can also be created by yourself, but with some effort, see FAQ for details. Can work without maps as a simple navigator. Works with a number of online maps such as Open Street Map (Internet connection required). Works with SAS.Planet maps cache.</string>
    <string name="donations">Donations</string>
    <string name="donate">If you like this application you can donate for the further development using one of the following methods:</string>
    <string name="donate_google">Donate via Google Play Store</string>
	<string name="donate_paypal">Donate via PayPal</string>
	<string name="communities">Communities</string>
	<string name="googleplus">Google+</string>
	<string name="facebook">Facebook</string>
	<string name="twitter">Twitter</string>
	<string name="license">License</string>
	<string name="credits">Credits</string>
    <string name="msg_wait">Please wait&#8230;</string>
    <string name="msg_scansdcard">Scanning SD card</string>
    <string name="msg_initializingmaps">Initializing maps&#8230;</string>
    <string name="msg_initializingdata">Initializing data&#8230;</string>
    <string name="msg_initializingplugins">Initializing plugins&#8230;</string>
    <string name="msg_initializingview">Initializing view&#8230;</string>
    <string name="msg_paid">Donated version</string>
    <string name="msg_dedicated">Dedicated to my fair Olya</string>
    <string name="msg_nothing_found">Nothing was found. Please take into account that data is searched only if it is loaded in Androzic, named locations are searched only if Internet connection is available.</string>
    <string name="msg_empty_map_list">No maps available.</string>
    <string name="msg_empty_waypoint_list">No waypoints available. You can create some or load them from file.</string>
    <string name="msg_empty_route_list">No routes available. You can create route or load it from file.</string>
    <string name="msg_empty_track_list">No tracks available. You can load track from file.</string>
    <string name="msg_empty_file_list">No suitable files found in data folder.</string>
    <string name="msg_newdatafolder">On popular request Androzic now works with folders differently. You can freely select any folder for maps and data. Data folder is now unified for all data types: waypoints, tracks and routes. You have to copy your existing data files manually to the following autocreated folder: &#8216;%s&#8217;.</string>
    <string name="msg_expandcurrenttrack">If you have not cleared your current track for a long time this can significantly degrade performance. Proceed?</string>
    <string name="msg_clearcurrenttrack">This will clear all your moving history, are you sure?</string>
    <string name="msg_emptytracksegment">Selected track segment is empty, nothing to save</string>
    <string name="msg_nolastknownlocation">Your recent location is not known</string>
    <string name="msg_notimplemented">Sorry! Action is not implemented yet!</string>
    <string name="err_nosdcard">SD card unavailable</string>
    <string name="err_nofile">No such file</string>
    <string name="err_write">Unable to write file</string>
    <string name="err_noconnection">Network connection error</string>
    <string name="err_wrongformat">Wrong file format</string>
    <string name="err_read">Can not read file</string>
    <string name="err_shortroute">Route must contain at least two waypoints</string>
    <string name="err_nogps">No GPS device found</string>
    <string name="err_nomemory">Memory shortage detected, please report this to developer</string>
    <string name="err_notconfigured">Not configured</string>
    <string name="err_no_network_provider">No network location provider available</string>
    <string name="sat_stop">GPS disabled</string>
    <string name="sat_start">GPS enabled</string>
    <string name="sat_firstfix">GPS active</string>
    <string name="following_enabled">Following enabled</string>
    <string name="following_disabled">Following disabled</string>
    <string name="backQuit">Press Back again to quit</string>
    <string name="quitQuestion">Do you want to quit?</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="gotit">Got it</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="navigate">Navigate</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="change">Change</string>
    <string name="more">More</string>
    <string name="name">Name</string>
	<string name="description">Description</string>
    <string name="show">Show</string>
    <string name="color">Color</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="altitude">Altitude</string>
	<string name="proximity">Proximity</string>
	<string name="accuracy">Accuracy</string>
	<string name="line_width">Line width</string>
	<string name="filename">File name</string>
	<string name="coordformat">Coordinates format</string>
	<string name="direction">Select direction</string>
	<string name="from">From</string>
	<string name="never">never</string>
	<string name="distance">Distance</string>
	<string name="bearing">Bearing</string>
	<string name="currentloc">Current location</string>
	<string name="satellites">Satellites</string>
	<string name="lastfix">Last fix</string>
	<string name="declination">Declination</string>
	<string name="provider">Provider</string>
	<string name="sunrise">Sunrise</string>
	<string name="sunset">Sunset</string>
	<string name="sensitivity">Sensitivity</string>
	<string name="coarse">coarse</string>
	<string name="fine">fine</string>
	<string name="algorithm">Algorithm</string>
	<string name="alg_a">Cruise</string>
	<string name="alg_b">Flounce</string>
	<string name="update_almanac">Request almanac update</string>
    <string name="degrees">Degrees</string>
	<string name="easting">Easting</string>
	<string name="northing">Northing</string>
	<string name="zone">Zone</string>
	<string name="hemisphere">Hemisphere</string>
	<string name="s">S</string>
	<string name="n">N</string>
    <string name="mgrs_string">MGRS string</string>
	<string name="waypointset">Set</string>
	<string name="markercolor">Marker color</string>
	<string name="textcolor">Name color</string>
	<string name="icon">Icon</string>
	<string name="primary">Primary</string>
	<string name="advanced">Advanced</string>
	<string name="hdop">HDOP</string>
	<string name="vdop">VDOP</string>
	<string name="from_date">Starting from</string>
	<string name="till_date">Ending at</string>
	<string name="format">Format</string>
	<string name="skip_single_locations">Skip single locations</string>
	<string name="zoom_100">Zoom 100%</string>
	<string name="zoom_in">Zoom in</string>
	<string name="zoom_out">Zoom out</string>
	<string name="next_map">More scaled map</string>
	<string name="prev_map">Less scaled map</string>
	<string name="expand">Expand</string>
	<string name="collapse">Collapse</string>
	<string name="from_start">From</string>
	<string name="start_to_end">to</string>
	<string name="drag">drag</string>
	<string name="online_maps">Online maps</string>
	<string name="sas_maps">SAS.Planet maps</string>
	<string name="start_point">Start point</string>
	<string name="finish_point">Finish point</string>
	<string name="statistics">Statistics</string>
	<string name="max_speed">Maximim speed</string>
	<string name="average_speed">Average speed</string>
    <string name="coordinate_degree">DD.DDDDDD</string>
    <string name="coordinate_degmin">DD&#xb0; MM.MMMM\'</string>
    <string name="coordinate_degminsec">DD&#xb0; MM\' SS.SSS\"</string>
    <string name="coordinate_utmups">UTM/UPS</string>
    <string name="coordinate_mgrs">MGRS</string>
    <string name="abbr_milliseconds">ms</string>
    <string name="waypoint_deleted">Waypoint deleted</string>
    <string name="badmaps">Map index error</string>
    <string name="nomaps">No maps found</string>
    <string name="upto">Up to %.0f meters</string>
    <string name="arrived">You have reached route destination</string>
    <string name="restart_needed">Application restart needed</string>
	<string name="t2r_explained"><b>This feature is experimental.</b> Track should be sensible. It means that it
	should describe traveling from point A to point B but not searching one point all around. Try both algorithms
	and see what suits you better. `Cruise´ algorithm is linear and route generation time is predictable while
	`Flounce´ algorithm is totally unpredictable. Coarse sensitivity can result in missing some turns while fine
	sensitivity can add unnecessary waypoints.</string>
    <string name="menu_navigate">Navigate</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_remove">Remove</string>
	<string name="menu_share">Share</string>
	<string name="menu_view">View</string>
    <string name="pref_plugins_title">Plugins</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_folder_title">Folders</string>
    <string name="pref_map_title">Maps</string>
    <string name="pref_show_title">Display</string>
	<string name="pref_unit_title">Units</string>
	<string name="pref_tracking_title">Tracks</string>
	<string name="pref_waypoint_title">Waypoints</string>
	<string name="pref_route_title">Routes</string>
	<string name="pref_navigation_title">Navigation</string>
</resources>