<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androzic="http://schemas.android.com/apk/res-auto" >

    <header
        androzic:fragment="com.androzic.Preferences$MapPreferencesFragment"
        androzic:help="@+id/map_section"
        androzic:title="@string/pref_map_title" >
        <extra
            android:name="resource"
            android:value="pref_behavior" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:title="@string/pref_folder_title" >
        <extra
            android:name="resource"
            android:value="pref_folder" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/location_section"
        androzic:title="@string/pref_loc_title" >
        <extra
            android:name="resource"
            android:value="pref_location" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/display_section"
        androzic:title="@string/pref_show_title" >
        <extra
            android:name="resource"
            android:value="pref_display" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:title="@string/pref_unit_title" >
        <extra
            android:name="resource"
            android:value="pref_unit" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/track_section"
        androzic:title="@string/pref_tracking_title" >
        <extra
            android:name="resource"
            android:value="pref_tracking" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/waypoint_section"
        androzic:title="@string/pref_waypoint_title" >
        <extra
            android:name="resource"
            android:value="pref_waypoint" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/route_section"
        androzic:title="@string/pref_route_title" >
        <extra
            android:name="resource"
            android:value="pref_route" />
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/navigation_section"
        androzic:title="@string/pref_navigation_title" >
        <extra
            android:name="resource"
            android:value="pref_navigation" />
    </header>
    <header
        androzic:id="@+id/pref_plugins"
        androzic:fragment="com.androzic.Preferences$PluginsPreferencesFragment"
        androzic:title="@string/pref_plugins_title" >
    </header>
    <header
        androzic:fragment="com.androzic.Preferences$PreferencesFragment"
        androzic:help="@+id/advanced_section"
        androzic:title="@string/pref_advanced_title" >
        <extra
            android:name="resource"
            android:value="pref_general" />
    </header>

</preference-headers>