<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dip">

        <TextView
            android:id="@+id/dedicated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:paddingBottom="10dip"
            android:text="@string/msg_dedicated"/>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/msg_dedicated"
            android:paddingBottom="10dip"
            android:src="@drawable/olya1"
            android:visibility="gone"/>

        <include layout="@layout/inc_logo"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/version"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/homelinks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/communities"/>

        <TextView
            android:id="@+id/communitylinks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/donations"
            style="@style/sectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/donations"/>

        <TextView
            android:id="@+id/donationtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate"/>

        <TextView
            android:id="@+id/donationlinks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/sectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/license"/>

        <TextView
            android:id="@+id/license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/sectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"/>

        <TextView
            android:id="@+id/credits"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>