<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="6dip" >

        <CheckBox
            android:id="@+id/show_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:text="@string/color"
        android:textStyle="bold" />

    <com.androzic.ui.ColorButton
        android:id="@+id/color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:text="@string/line_width"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/width_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>