<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageButton
        android:id="@+id/navigate_button"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/menu_navigate"
        android:src="@drawable/ic_navigation_white_24dp" />

    <ImageButton
        android:id="@+id/edit_button"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/menu_edit"
        android:src="@drawable/ic_edit_white_24dp" />

    <ImageButton
        android:id="@+id/share_button"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/menu_share"
        android:src="@drawable/ic_share_white_24dp" />

    <ImageButton
        android:id="@+id/remove_button"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/menu_remove"
        android:src="@drawable/ic_delete_white_24dp" />

</merge>