<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/content"
        style="@style/ContentLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/t2r_explained"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dip"
                android:text="@string/algorithm"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/alg_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alg_a" />

                <RadioButton
                    android:id="@+id/alg_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alg_b" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dip"
                android:text="@string/sensitivity"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sensitivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:progress="1" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/fine" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/coarse" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/generate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/generate"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>